--- a/index.html
+++ b/index.html
@@ -1,13 +1,5 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset="utf-8">
-    <title>Home</title>
-</head>
-
-<body>
-    <h1>Hello World!</h1>
-</body>
-
-</html>
+---
+title: abhya
+layout: default
+---
+<h1>hello world</h1>
