latest post part completed

--- a/index.html
+++ b/index.html
@@ -2,4 +2,22 @@
 title: abhya
 layout: default
 ---
-<h1>hello world</h1>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+</head>
+<div class="container">
+    <div class="hero">
+
+    </div>
+
+    <div class="foo-link">
+
+    </div>
+    <div class="fea-post">
+        {% include featured.html %}
+    </div>
+    <div class="foo-social">
+
+    </div>
+</div>
